# py-dep-why

./: .gitignore  LICENSE  README.md  dev_plan.md  py_dep_why_spec.md  pyproject.toml
.github/workflows/: test.yml
src/py_dep_why/: cli.py  explain.py  graph.py  normalize.py  output.py  target_env.py
tests/: test_doctor_command.py  test_exit_codes.py  test_graph_build.py  test_graph_command.py  test_integration.py  test_normalize.py  test_output.py  test_roots.py  test_target_env.py  test_why_command.py  test_why_paths.py
