[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-dep-why"
version = "0.1.0"
description = "A CLI tool to explain why a package is present in an environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "packaging>=23.0",
]

[project.scripts]
py-dep-why = "py_dep_why.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
